	  forks are successful (they must return defined).

        * t/todo.t removed.  We have passing tests (recv.t)
          for the reminder I had stuffed into here.

	* t/fork.t added, for testing autodying fork.

        * The internal subroutine _remove_lexical_subs has been
          renamed to a much less misleading name of _install_subs,
          since that's what it actually does now.

1.10_07  Sun Jun 29 15:54:26 AEST 2008
	* RELEASE CODENAME: "ikegami", in thanks for solving the problem
	  of getting lexical replacement of subroutines working for real
	  under Perl 5.8.  As this works better than my 5.10 implemenation,
	  it forms the foundation for this release.

	* Removed inappropriate diagnostics about :lexical from Fatal.pm

	* Moved can't mix lexical and void diagnostics to autodie.pm

	* Added some basic tests for sysopen()

	* Removed the 5.10 only way of tracking lexical hints with
	  %^H.  Our code now exclusively uses the more portable
	  5.8 code that employs Scope::Guard (and has less side-effects).

	* Exotic system is no longer clobbered under 5.10 outside of
	  autodie's scope.

	* autodie::exception::match is better exercised in the 5.8
	  test suite.

	* Re-enabled 'use autodie' vanilla tests.

	* t/backcompat.t no longer fails under Devel::Cover

	* Repeating function names in arguments to autodie no
	  longer causes those functions to become 'stuck' in
	  autodying mode.

	* Wrong-version of Fatal.pm support added, along with basic
	  hints on how to get it working.

	* Expanded documentation on autodie, particularly for
	  exception handling under Perl 5.8.

	* Less warnings from t/exceptions.t when running under 5.10.

	* All releases now really depend upon Scope::Guard, not just 5.8.

1.10_06 Sun Jun 22 21:50:39 AEST 2008

	* RELEASE CODENAME: "Chocolateboy", in thanks for his wonderful
	  insights, and for letting me sound off way too many ideas
	  about how things may be done.
